# farmer-bank

./: BUILD  README.md  WORKSPACE  bazel-bin  bazel-farmer_bank  bazel-out  bazel-testlogs  deps.bzl  go.mod  nx.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: data.tsx  layout.tsx  page.tsx
app/compare/: page.tsx
apps/server/: .gitignore  BUILD  README.md  go.mod  go.sum  gqlgen.yml  project.json  server.go
apps/server/graph/: BUILD.bazel  generated.go  models.go  resolver.go  schema.graphqls  schema.resolvers.go
apps/server/graph/model/: BUILD.bazel  models.go
apps/web/: .bazelignore  README.md  graphql.config.yml  next.config.js  package.json  pnpm-lock.yaml  project.json
apps/web/app/: BUILD  data.tsx  layout.tsx  page.tsx
apps/web/bazel/: next.bzl
apps/web/components/: add-to-compare-dialog.tsx  bank-card.tsx  header.tsx
apps/web/components/ui/: button.tsx  text.tsx  title-gradient.tsx
apps/web/graphql/_generated_/: _gql_.ts
apps/web/graphql/fragments/: bank.gql
apps/web/graphql/queries/: banks.gql
apps/web/public/: BUILD
apps/web/styled-system/tokens/: index.css
apps/web/utils/: provider.tsx
components/: bank-card.tsx  footer.tsx  search-input-wrapper.tsx
components/ui/: radix-dialog.tsx
server/: data.json  go.mod  server.go
server/graph/: generated.go  schema.resolvers.go
server/graph/model/: models_gen.go
styled-system/tokens/: index.mjs  tokens.d.ts
web-app/: codegen.ts  panda.config.ts
web-app/app/: BUILD
web-app/components/ui/: container.tsx  input.tsx
web-app/styled-system/tokens/: keyframes.css
(+1 files in other folders)
